# compile-time-lib

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  user_guide.html
.github/workflows/: adocs-build.yml  asciidoctor-ghpages.yml  build_and_unit_test.yml  build_run_test.yml  unit_tests.yml
cmake/: GenerateGetTokenSource.cmake
doc/: ctl.adoc  ctl.html  utility.adoc  utility.html
doc/container/: algorithms.adoc  algorithms.html  container.adoc  container.html  list.adoc  list.html
docs/: ctl.adoc  index.adoc  logger.adoc  utility.adoc
docs/container/: algorithms.adoc  container.adoc  list.adoc
include/: CMakeLists.txt  fold_ops.hpp  list.h  list.hpp  list_utils.hpp  utils.hpp
include/container/: algorithms.hpp  list.hpp
include/debug/: show_type.hpp
include/logger/: log.hpp  log_config.hpp  log_dispatcher.hpp  log_message.hpp  metadata.hpp
scripts/: generate_get_token_source.py
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  list.cpp  list_features.cpp  list_test.cpp  utils_test.cpp
test/container/: list_test.cpp
test/logger/: constant_string_test.cpp
